Cool/tests/bad/7-method-redefinition.cl
class Main inherits IO {
  main() : Object { 
    self.out_string("Hello, world.\n") 
  } ;
  f() : Int { 5};
  f() : Bool {true};
} ; 
